--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,7 +96,8 @@
                                          
                                         </div>
                                         <br>
-                                        <button type="button" class="btn btn-outline-warning">Buy now</button>
+                                        <button type="button" class="btn btn-outline-warning">Buy now</button>&nbsp;&nbsp;
+                                        <button type="button" class="btn btn-outline-warning">Detail</button>
                                     </div>
                                 </div>
                             </div>
