4 files modified, 3 added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,7 +97,7 @@
                                         </div>
                                         <br>
                                         <button type="button" class="btn btn-outline-warning">Buy now</button>&nbsp;&nbsp;
-                                        <button type="button" class="btn btn-outline-warning">Detail</button>
+                                        <button type="button" routerLink="/product/{{product.id}}" class="btn btn-outline-warning">Detail</button>
                                     </div>
                                 </div>
                             </div>
