--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,30 @@
      
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin: 50px 50px 10px 50px;">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/57504790_2661376503878109_6089723902957715456_n.jpg?_nc_cat=104&_nc_sid=110474&_nc_oc=AQkmOoCmVRP67igUzEo4rjktvabDhj_mPnpuHtoNKnBTupn2rxFNo9sn0zlc5hqu93Nsn2g0xuDZ5_STyrKAeXSX&_nc_ht=scontent-hkt1-1.xx&oh=1e7babdaf5a0e0143e758674ca509fd8&oe=5EA45A6B" style="height:500px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/69713462_10157533452598524_8398645162477092864_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_oc=AQlD1mPwsG4qa3__tsn4rlEaccNPrKwscsgljQEu3sh4_1uTsqvNbx6J7Ce3yoFqd_sKvIkQ3Q_oc-TYUd1XZouS&_nc_ht=scontent-hkt1-1.xx&oh=d4afbe9711eff21bc833c84580641463&oe=5EA3177F" style="height:500px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/52592490_10157057178353524_3800773519810232320_o.jpg?_nc_cat=106&_nc_sid=8024bb&_nc_oc=AQmLOfm69OieBkmD-LnNijRA2XG_xeS0rezU0tpCTDPxHETuzTb0jI3NtJ8-Q9owDEel1_WPXH6VHMQS_LNJJqe1&_nc_ht=scontent-hkt1-1.xx&oh=d0a6d5d8c015823df9fd926444da43a3&oe=5EA5A0E6" style="height:500px;">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
      <section class="product-shop spad">
         <div class="container">
             <div class="row">
@@ -109,3 +135,4 @@
             </div>
         </div>
     </section>
+    
