--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -75,7 +75,7 @@
                     <ul>
                         
                         <li><a routerLink="/home">Home</a></li>
-                        <li><a routerLink="/manage">Product</a></li>
+                        <li><a routerLink="/product-list">Product</a></li>
                         <li><a href="./contact.html">Sale</a></li>
                         
                         <li><a href="./contact.html">Contact</a></li>
