--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,4 +25,59 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+    <div class="banner-section spad">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="single-banner">
+                        <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/81358622_10157902013218524_8605381274376339456_o.jpg?_nc_cat=111&_nc_sid=8024bb&_nc_oc=AQk0-u0c7XqVZnDB8B59u5J4D8vQu5HrYvbze2LxRfYpXqNBVKZuFnG3ZO4SvByuQTUA86iG2l5C-lzAO0ExzK3_&_nc_ht=scontent-hkt1-1.xx&oh=9c71841cccf98d1d059d0769be97ae15&oe=5EA4C272" style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4>Converse</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="single-banner">
+                        <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/75380488_3026357147380041_2159013015259709440_o.jpg?_nc_cat=103&_nc_sid=8024bb&_nc_oc=AQmZ4Fkys0QwurLqm5qwlSuNarx4FIJ-T6KlBeHBY-BE_RhJmdR72nGDlLRtVUJOiAt5b-eD0NfaLk-dGmEYiAAr&_nc_ht=scontent-hkt1-1.xx&oh=9599bad9c024d19d49c08a1634f96594&oe=5EA3F104"  style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4 wi>Vans</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="single-banner">
+                        <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/78672876_2694745063897583_1030987786800332800_o.jpg?_nc_cat=110&_nc_sid=8024bb&_nc_oc=AQkoVvtZ9WTILTuANqV03tbhBh-Kpd7FN0OtnHMO1QPRMr8HGugIpPz4J4LYnZsHWB_Gml0Xw9KbopuChQobJ2dA&_nc_ht=scontent-hkt1-1.xx&oh=c29460bfb971d947ece3f62dda52a52a&oe=5EA4F02D" style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4>Adidas</h4>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+        <div class="banner-section spad">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="single-banner">
+                        <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t31.0-8/p960x960/22467449_10155873165443216_3716660733581362299_o.jpg?_nc_cat=107&_nc_sid=2d5d41&_nc_oc=AQkZ8oz1TryHvlqs9s-X2CIPm5JAqfwXoNW1gy6LebHob5PS2kq-Lq_UwMJrfNUlW7joj17UU_kl8wzIe7blHE_h&_nc_ht=scontent-hkt1-1.xx&_nc_tp=6&oh=16929d2e6ce364685fba84f62807a146&oe=5EA5DF4A" style="width:324px;height:350px;">
+                        <div class="inner-text">
+                            <h4>Converse</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="single-banner">
+                        <img src="https://giaynike.net/wp-content/uploads/2020/02/nike-air-force-1-shadow-Se-8-2.jpg"  style="width:324px;height:350px;">
+                        <div class="inner-text">
+                            <h4>Nike</h4>
+                        </div>
+                    </div>
+                </div>
+
+                
+            </div>
+        </div>
+    </div>
   
