--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -61,11 +61,11 @@
                 <div class="col-lg-4">
                     <div class="newslatter-item">
                         <h5>Join Our Newsletter Now</h5>
-                        <p>Get E-mail updates about our latest shop and special offers.</p>
-                        <form action="#" class="subscribe-form">
+                        <p> E-mail updates about our latest shop and special offers.</p>
+                        <!-- <form action="#" class="subscribe-form">
                             <input type="text" placeholder="Enter Your Mail">
                             <button type="button">Subscribe</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
