--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,10 +10,10 @@
       <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/81003716_10157892944668524_1824211320874991616_o.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_oc=AQnM0i_BInHW4-fULFKXvlJGSiPSeUfbfpuI851SUNPzP83cAepHci8S9P5maxc6B_JZQNmvSvHyp8hIxizB3W78&_nc_ht=scontent-hkt1-1.xx&oh=ceadf2faccf31e748e3d099dfe576abe&oe=5EA5FB1C" style="height:500px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/p960x960/71884871_10157620776433524_1875491340603621376_o.jpg?_nc_cat=111&_nc_sid=8024bb&_nc_oc=AQm5YxFXJvQVM34sCb7qaf_csSuiSOZWl-g8bXQt7QfZQDrTSBv38remkN-IuIpgtw1Pn9XA-CF2CICL9gUCgWxp&_nc_ht=scontent-hkt1-1.xx&_nc_tp=6&oh=41e8de3db6abf1465032e3c67fc322c6&oe=5EA46FE7" style="height:500px;">
+      <img class="d-block w-100" src="https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
     </div>
         <div class="carousel-item active">
-      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/81003716_10157892944668524_1824211320874991616_o.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_oc=AQnM0i_BInHW4-fULFKXvlJGSiPSeUfbfpuI851SUNPzP83cAepHci8S9P5maxc6B_JZQNmvSvHyp8hIxizB3W78&_nc_ht=scontent-hkt1-1.xx&oh=ceadf2faccf31e748e3d099dfe576abe&oe=5EA5FB1C" style="height:500px;">
+      <img class="d-block w-100" src="https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
     </div>
 
   </div>
@@ -64,7 +64,7 @@
                     <div class="single-banner">
                         <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t31.0-8/p960x960/22467449_10155873165443216_3716660733581362299_o.jpg?_nc_cat=107&_nc_sid=2d5d41&_nc_oc=AQkZ8oz1TryHvlqs9s-X2CIPm5JAqfwXoNW1gy6LebHob5PS2kq-Lq_UwMJrfNUlW7joj17UU_kl8wzIe7blHE_h&_nc_ht=scontent-hkt1-1.xx&_nc_tp=6&oh=16929d2e6ce364685fba84f62807a146&oe=5EA5DF4A" style="width:324px;height:350px;">
                         <div class="inner-text">
-                            <h4>Converse</h4>
+                            <h4>Puma</h4>
                         </div>
                     </div>
                 </div>
