--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,14 @@
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+
   </ol>
   <div class="carousel-inner">
         <div class="carousel-item">
-      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/81003716_10157892944668524_1824211320874991616_o.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_oc=AQnM0i_BInHW4-fULFKXvlJGSiPSeUfbfpuI851SUNPzP83cAepHci8S9P5maxc6B_JZQNmvSvHyp8hIxizB3W78&_nc_ht=scontent-hkt1-1.xx&oh=ceadf2faccf31e748e3d099dfe576abe&oe=5EA5FB1C" style="height:500px;">
+      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/70508033_2925838184098605_4944437905310351360_o.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_oc=AQlN1GA30JINNu-ZWGLW1njWmT-JvDpbbSxHh3VD0Hwd-3Z3X88Liul5GxitOEtt8H1oLqq5l90ZprdnxgQtAw7E&_nc_ht=scontent-hkt1-1.xx&oh=27ffee869875e2e1f3146e22481891de&oe=5EA4287B" style="height:500px;">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
+      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/68513203_2896237457058678_2291496920796889088_o.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_oc=AQnmlKAvLHcj3TdVC2pyUqAU6frBhMI9rNHRyqB0yKCONWy3ry4DxgSpAOq9gRIRw-chkz4v0nzuOcnHHAHj8PWh&_nc_ht=scontent-hkt1-1.xx&oh=dd51f796749a0461f1d5147353ec67a9&oe=5EA66FC7" style="height:500px;">
     </div>
         <div class="carousel-item active">
       <img class="d-block w-100" src="https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
@@ -64,7 +64,7 @@
                     <div class="single-banner">
                         <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t31.0-8/p960x960/22467449_10155873165443216_3716660733581362299_o.jpg?_nc_cat=107&_nc_sid=2d5d41&_nc_oc=AQkZ8oz1TryHvlqs9s-X2CIPm5JAqfwXoNW1gy6LebHob5PS2kq-Lq_UwMJrfNUlW7joj17UU_kl8wzIe7blHE_h&_nc_ht=scontent-hkt1-1.xx&_nc_tp=6&oh=16929d2e6ce364685fba84f62807a146&oe=5EA5DF4A" style="width:324px;height:350px;">
                         <div class="inner-text">
-                            <h4>Puma</h4>
+                            <h4>Nike</h4>
                         </div>
                     </div>
                 </div>
