--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -95,8 +95,8 @@
                                          
                                         </div>
                                         <br>
-                                        <button type="button" class="btn btn-outline-warning" >Buy now</button>&nbsp;&nbsp;
-                                        <button type="button" routerLink="/product/{{product.id}}" class="btn btn-outline-warning">Detail</button>
+                                        <button style="width:90px;" type="button" class="btn btn-warning" >Buy now</button>&nbsp;&nbsp;
+                                        <button style="width:90px;"  type="button" routerLink="/product/{{product.id}}" class="btn btn-warning">Detail</button>
                                     </div>
                                 </div>
                             </div>
