--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -27,7 +27,10 @@
                                         </div>
                                         
                                     </form>  
-                                    <br><br>      <br>               
+                                    <br><br>      <br> 
+                                     <button class="btn btn-warning"type="submit">Add to cart</button>
+                                     &nbsp;
+                                    <button class="btn btn-warning"type="submit">Buy now</button>              <br><br><br>
                                     <div>
                                       
                                       <ul>
@@ -35,9 +38,7 @@
                                       </ul>
                                     </div>
                                     <br>
-                                    <button class="btn btn-warning"type="submit">Add to cart</button>
-                                     &nbsp;
-                                    <button class="btn btn-warning"type="submit">Buy now</button>
+                                   
                                 </div>
                             </div>
                         </div>
