--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -47,3 +47,12 @@
             </div>
         </div>
     </div>
+    <section class="sample-text-area">
+		<div class="container box_1170">
+			<h3 class="text-heading">Description detail</h3>
+			<p class="sample-text">
+			Ra đời với phong cách trẻ trung, năng động, nhưng không kém phần tinh tế, thời trang và nay điều ấy thật sự được khẳng định thêm lần nữa khi VANS PRIMARY CHECKERBOARD OLD SKOOL BLACK/WHITE ra đời, với sọc caro đậm chất VANS, đôi giày này một lần nữa khẳng định vị trí đặc biệt của mình đối với các tín đồ yêu cái đẹp cùng sự mạnh mẽ vốn có của VANS...
+
+			</p>
+		</div>
+	</section>
