--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,5 +1,5 @@
        <div class="first">
-          <button routerLink="/product-add"  type="button" class="btn btn-outline-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
+          <button routerLink="/product-add"  type="button"  class="btn btn-info" data-toggle="button" aria-pressed="false" autocomplete="off">
     Create  Product
   </button>
        </div>
