--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -1,5 +1,58 @@
-       <div class="first">
-          <button routerLink="/product-add"  type="button"  class="btn btn-outline-info" data-toggle="button" aria-pressed="false" autocomplete="off">
+       <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+ <header class="header-section">
+        <div class="header-top">
+            <div class="container">
+                <div class="ht-left">
+                    <div class="mail-service">
+                        <i class=" fa fa-envelope"></i>
+                     <b> Email:  vyktyph07853@fpt.edu.vn</b>
+                    </div>
+                    <div class="phone-service">
+                        <i class=" fa fa-phone"></i>
+                       <b> Phone:  0123456789</b>
+                    </div>
+                </div>
+                <div class="ht-right">
+                 
+                    <a href="#" class="login-panel"><i class="fa fa-user"></i>Login</a>
+                    
+                    <div class="top-social">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="ti-linkedin"></i></a>
+                        <a href="#"><i class="ti-pinterest"></i></a>
+                    </div>
+                </div>
+ 
+            </div>
+        </div>
+        <div class="container">
+            <div class="inner-header">
+                <div class="row">
+                    <div class="col-lg-2 col-md-2">
+                        <div class="logo">
+                          <h2><b>Shoes-V</b></h2>.store@
+
+                        </div>
+                    </div>
+                    <div class="col-lg-7 col-md-7">
+                        <div class="advanced-search">
+                          
+                            <div class="input-group">
+                                <input type="text" placeholder="Search">
+                                <button type="button"><i class="fas fa-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+
+
+ <div class="one">
+  <div class="first">
+          <button routerLink="/product-add"  type="button"  class="btn btn-info" data-toggle="button" aria-pressed="false" autocomplete="off">
     Create  Product
   </button>
        </div>
@@ -40,3 +93,5 @@
     </div>
      
 </div>
+ </div>
+     
