--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
    <section class="product-shop spad">
         <div class="container">
             <div class="row">
@@ -108,4 +109,5 @@
             </div>
         </div>
     </section>
+      <app-footer></app-footer>
     
