--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-     
+      <app-header></app-header> 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin: 50px 50px 10px 50px;">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -79,5 +79,6 @@
             </div>
         </div>
     </div>
+      <app-footer></app-footer>
     
   
