--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,13 @@ body {
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 }
+.one{
+  margin-top: 50px;
+border-style: ridge;
+    padding-left: 50px;
+
+ padding-right: 50px;
+}
 .single-product-area .zigzag-bottom {background-color: #f4f4f4}
 
 .single-product-area {
