--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="single-banner">
-                        <img src="https://giaynike.net/wp-content/uploads/2020/02/nike-air-force-1-shadow-Se-8-2.jpg"  style="width:324px;height:350px;">
+                        <img src="https://i.ytimg.com/vi/Cex1owTr034/maxresdefault.jpg"  style="width:324px;height:350px;">
                         <div class="inner-text">
                             <h4>Nike</h4>
                         </div>
