--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="single-product-area">
         <div class="zigzag-bottom"></div>
         <div class="container">
@@ -56,3 +57,4 @@
 			</p>
 		</div>
 	</section>
+  <app-footer></app-footer>
