--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -56,5 +56,41 @@
 
 			</p>
 		</div>
+
 	</section>
+  			<div class="text-center rp-title">
+			<b>	<h1 style="color:red;">-- Related products --</h1></b>
+			</div>
+      
+      <div class="banner-section spad">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="single-banner">
+                        <img src="https://zula.sg/wp-content/uploads/2020/03/converse-sakura-sneakers-1-990x500.jpg" style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4>Converse</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="single-banner">
+                        <img src="https://cdn.trendhunterstatic.com/thumbs/stacked-pack.jpeg"  style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4 wi>Vans</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="single-banner">
+                        <img src="https://cms-cdn.thesolesupplier.co.uk/2019/09/adidas-gazelle-Foot-District-11-1600x1061-1.jpg" style="width:324px;height:300px;">
+                        <div class="inner-text">
+                            <h4>Adidas</h4>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
   <app-footer></app-footer>
