--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,11 +7,11 @@
   </ol>
   <div class="carousel-inner">
         <div class="carousel-item">
-      <img class="d-block w-100" src="https://scontent-hkt1-1.xx.fbcdn.net/v/t1.0-9/70508033_2925838184098605_4944437905310351360_o.jpg?_nc_cat=100&_nc_sid=8024bb&_nc_oc=AQlN1GA30JINNu-ZWGLW1njWmT-JvDpbbSxHh3VD0Hwd-3Z3X88Liul5GxitOEtt8H1oLqq5l90ZprdnxgQtAw7E&_nc_ht=scontent-hkt1-1.xx&oh=27ffee869875e2e1f3146e22481891de&oe=5EA4287B" style="height:500px;">
+      <img class="d-block w-100" src=" https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
     </div>
-   
+  
         <div class="carousel-item active">
-      <img class="d-block w-100" src="https://cdn.converse.com.au/media/wysiwyg/HomepageHeroBannerNewDesign/slider_Renew_2880x1020_2.jpg" style="height:500px;">
+      <img class="d-block w-100" src="https://saigonsneaker.com/wp-content/uploads/2019/11/converse-collection-banner2.jpg" style="height:500px;">
     </div>
 
   </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="single-banner">
-                        <img src="https://i.ytimg.com/vi/Cex1owTr034/maxresdefault.jpg"  style="width:324px;height:350px;">
+                        <img src="https://giaynike.net/wp-content/uploads/2020/02/nike-air-force-1-shadow-Se-8-2.jpg"  style="width:324px;height:350px;">
                         <div class="inner-text">
                             <h4>Nike</h4>
                         </div>
