--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -73,14 +73,14 @@
         <div class="copyright-reserved">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
+                    <!-- <div class="col-lg-12">
                         <div class="copyright-text">
                           
                         </div>
                         <div class="payment-pic">
-                            <img src="img/payment-method.png" alt="">
+                            
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
