--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -77,11 +77,11 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let product of products">
-                        <td>{{product.name}}</td>
-                        <td>${{product.price}}</td>
-                        <td>{{product.desc}}</td>
-                        <td>{{product.status ? 'In stock': 'Out stock'}}</td>
-                        <td><a href="#"><img class="card-img-top" [src]="product.img" alt=""></a></td>
+                        <td >{{product.name}}</td>
+                        <td >${{product.price}}</td>
+                        <td >{{product.desc}}</td>
+                        <td >{{product.status ? 'In stock': 'Out stock'}}</td>
+                        <td ><a href="#"><img   class="card-img-top" [src]="product.img" height="200px" alt=""></a></td>
                         <!-- <td><button class="btn btn-primary" (click)="removeItem(product.id)">Delete</button></td> -->
                         <!-- <td><button class="btn btn-primary" routerLink="/product/{{product.id}}">Detail</button></td> -->
                         <td><button class="btn btn-warning" routerLink="/product/edit/{{product.id}}">Edit</button></td>
@@ -94,5 +94,8 @@
      
 </div>
  </div>
+
+
+
 
      
