--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -48,16 +48,18 @@
                             </div>
                         </div>
                     </div>
-
-<form class="w-50 mx-auto mt-3" *ngIf="product">
-
+ 
+<form class="w-100 mx-auto mt-3" *ngIf="product">
+<div class="one1">
   <div class="form-group">
     
    Name: <input type="text" name="name" class="form-control"placeholder="Product Name" [(ngModel)]="product.name">
    <br>
    Price: <input type="text" name="price" class="form-control"placeholder="Price" [(ngModel)]="product.price">
      <br>
- Desc:   <input type="text" name="desc" class="form-control"placeholder="Price" [(ngModel)]="product.desc">
+ Desc:  
+  <!-- <input height="10%" type="text" name="desc" class="form-control"placeholder="Price" [(ngModel)]="product.desc"> --> 
+ <textarea  rows="5" name="desc" class="form-control" placeholder="Price" [(ngModel)]="product.desc"></textarea>
      <br>
   Status:  <input  type="text" name="status" class="form-control"placeholder="Price" [(ngModel)]="product.status">
      <br>
@@ -81,70 +83,7 @@
   <div class="first">
      <button type="submit" class="btn btn-primary" (click)="updateProduct()">Submit</button>
   </div>
- 
+  </div>
 </form>
 
-                   <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="footer-left">
-                        <div class="footer-logo">
-                            <a href="#"><img  src="img/footer-logo.png" alt=""></a>
-                        </div>
-                        <ul>
-                            <li>Address: 46 Tran Phu, Ha Dong, Ha Noi.</li>
-                            <li>Phone: 0341.188.888</li>
-                            <li>Email: vyktyph0758@fpt.edu.vn</li>
-                        </ul>
-                        
-                    </div>
-                </div>
-                <div class="col-lg-2 offset-lg-1">
-                    <div class="footer-widget">
-                        <h5>Information</h5>
-                        <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Checkout</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Serivius</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-2">
-                    <div class="footer-widget">
-                        <h5>My Account</h5>
-                        <ul>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Shopping Cart</a></li>
-                            <li><a href="#">Shop</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="newslatter-item">
-                        <h5>Join Our Newsletter Now</h5>
-                        <p> E-mail updates about our latest shop and special offers.</p>
-                        <!-- <form action="#" class="subscribe-form">
-                            <input type="text" placeholder="Enter Your Mail">
-                            <button type="button">Subscribe</button>
-                        </form> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copyright-reserved">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="copyright-text">
-                          
-                        </div>
-                        <div class="payment-pic">
-                            <img src="img/payment-method.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-                </div>
+
