--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="single-banner">
-                        <img src="https://scontent-hkt1-1.xx.fbcdn.net/v/t31.0-8/p960x960/22467449_10155873165443216_3716660733581362299_o.jpg?_nc_cat=107&_nc_sid=2d5d41&_nc_oc=AQkZ8oz1TryHvlqs9s-X2CIPm5JAqfwXoNW1gy6LebHob5PS2kq-Lq_UwMJrfNUlW7joj17UU_kl8wzIe7blHE_h&_nc_ht=scontent-hkt1-1.xx&_nc_tp=6&oh=16929d2e6ce364685fba84f62807a146&oe=5EA5DF4A" style="width:324px;height:350px;">
+                        <img src="https://capvirgo.com/wp-content/uploads/2019/03/mtv-puma-rs-x-tracks-release-date-price-19.jpg" style="width:324px;height:350px;">
                         <div class="inner-text">
                             <h4>Puma</h4>
                         </div>
