--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -61,10 +61,11 @@
   <!-- <input height="10%" type="text" name="desc" class="form-control"placeholder="Price" [(ngModel)]="product.desc"> --> 
  <textarea  rows="5" name="desc" class="form-control" placeholder="Price" [(ngModel)]="product.desc"></textarea>
      <br>
-  Status:  <input  type="text" name="status" class="form-control"placeholder="Price" [(ngModel)]="product.status">
+ 
      <br>
    Img: <input type="text" name="img" class="form-control"placeholder="Price" [(ngModel)]="product.img">
      <br>
+     Status:
            <input type="text"      
                     class="form-control"      
                     value="{{product.status ? 'In stock' : 'Out stock'}}"
