--- a/src/app/backend/dashboard/dashboard.component.html
+++ b/src/app/backend/dashboard/dashboard.component.html
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </form>
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
+                    <ul class="navbar-nav mr-auto" id="side-menu">
                         <li>
                             <a href="index.html"><i class="fa fa-dashboard fa-fw nav_icon"></i>Dashboard</a>
                         </li>
