--- a/src/app/backend/dashboard/dashboard.component.html
+++ b/src/app/backend/dashboard/dashboard.component.html
@@ -141,15 +141,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="navbar-nav mr-auto" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw nav_icon"></i>Dashboard</a>
+                            <a routerLink="/admin/dashboard">Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-laptop nav_icon"></i>Product</a>
+                            <a routerLink="/admin/manage">Product</a>
                             
                          
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-indent nav_icon"></i>Add Product</a>
+                            <a routerLink="/admin/product-add">Add Product</a>
                             
                            
                         </li>
