--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -143,19 +143,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </form>
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
+                    <ul class="navbar-nav mr-auto" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw nav_icon"></i>Dashboard</a>
+                            <a routerLink="/admin/dashboard">Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-laptop nav_icon"></i>Product</a>
+                            <a routerLink="/admin/manage">Product</a>
                             
-                            <!-- /.nav-second-level -->
+                         
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-indent nav_icon"></i>Add Product</a>
+                            <a routerLink="/admin/product-add">Add Product</a>
                             
-                            <!-- /.nav-second-level -->
+                           
                         </li>
                         
                         
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         
                     </ul>
                 </div>
-                <!-- /.sidebar-collapse -->
+             
             </div>
             <!-- /.navbar-static-side -->
         </nav>
