--- a/src/app/backend/product-edit/product-edit.component.html
+++ b/src/app/backend/product-edit/product-edit.component.html
@@ -1,8 +1,4 @@
-       <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
 <!--
@@ -146,19 +142,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </form>
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
+                    <ul class="navbar-nav mr-auto" id="side-menu">
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw nav_icon"></i>Dashboard</a>
+                            <a routerLink="/admin/dashboard">Dashboard</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-laptop nav_icon"></i>Product</a>
+                            <a routerLink="/admin/manage">Product</a>
                             
-                            <!-- /.nav-second-level -->
+                         
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-indent nav_icon"></i>Add Product</a>
+                            <a routerLink="/admin/product-add">Add Product</a>
                             
-                            <!-- /.nav-second-level -->
+                           
                         </li>
                         
                         
@@ -167,7 +163,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         
                     </ul>
                 </div>
-                <!-- /.sidebar-collapse -->
+             
             </div>
             <!-- /.navbar-static-side -->
         </nav>
@@ -177,28 +173,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="one1">
   <div class="form-group">
     
-   Name: <input type="text" name="name" class="form-control"placeholder="Product Name" [(ngModel)]="product.name">
-   <br>
-   Price: <input type="text" name="price" class="form-control"placeholder="Price" [(ngModel)]="product.price">
-     <br>
- Desc:  
+<input type="text"  name="name" style="width:600px; height:50px; border: 2px solid black; border-radius: 4px;" placeholder="Product Name" [(ngModel)]="product.name">
+   <br><br>
+   <input type="text" name="price" style="width:600px; height:50px; border: 2px solid black; border-radius: 4px;" placeholder="Price" [(ngModel)]="product.price">
+     <br><br>
+   
   <!-- <input height="10%" type="text" name="desc" class="form-control"placeholder="Price" [(ngModel)]="product.desc"> --> 
- <textarea  rows="5" name="desc" class="form-control" placeholder="Price" [(ngModel)]="product.desc"></textarea>
-     <br>
- 
-     <br>
-   Img: <input type="text" name="img" class="form-control"placeholder="Price" [(ngModel)]="product.img">
-     <br>
-     Status:
+ <textarea  rows="5" name="desc" style="width:600px; height:50px; border: 2px solid black; border-radius: 4px;" placeholder="Price" [(ngModel)]="product.desc"></textarea>
+<br><br>
+   <input type="text" name="img" style="width:600px; height:50px; border: 2px solid black; border-radius: 4px;" placeholder="Price" [(ngModel)]="product.img">
+     <br><br>
+    
            <input type="text"      
-                    class="form-control"      
+                    style="width:600px; height:50px; border: 2px solid black; border-radius: 4px;"     
                     value="{{product.status ? 'In stock' : 'Out stock'}}"
                     readonly
                 />
       <br>
                 <input type="checkbox" 
-                  name="status"
                   class="form-control"
+                  
                   [(ngModel)]="product.status"
                   checked
                 />
