--- a/src/app/frontend/product-list/product-list.component.html
+++ b/src/app/frontend/product-list/product-list.component.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="product-list">
                         <div class="row">
-                            <div class="col-lg-4 col-sm-5" *ngFor="let product of products">
+                            <div class="col-lg-4 col-sm-5" *ngFor="let product of products | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize ">
                                 <div class="product-item">
                                     <div class="pi-pic">
                                         <a href="#"><img class="card-img-top" [src]="product.img" alt=""></a>
@@ -104,10 +104,16 @@
     
                         </div>
                     </div>
+
                     
                 </div>
+
             </div>
         </div>
     </section>
+                                        <ngb-pagination
+  [(page)]="page"
+  [pageSize]="pageSize"
+  [collectionSize]="products.length"></ngb-pagination>
       <app-footer></app-footer>
     
