--- a/src/app/frontend/product-list/product-list.component.html
+++ b/src/app/frontend/product-list/product-list.component.html
@@ -113,7 +113,7 @@
     </section>
                                         <ngb-pagination
   [(page)]="page"
-  [pageSize]="pageSize"
+  [pageSize]="pageSize" class="d-flex justify-content-center"
   [collectionSize]="products.length"></ngb-pagination>
       <app-footer></app-footer>
     
