--- a/src/app/backend/manage/manage.component.html
+++ b/src/app/backend/manage/manage.component.html
@@ -211,7 +211,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
        </div>
                                                <ngb-pagination
   [(page)]="page"
-  [pageSize]="pageSize"
+  [pageSize]="pageSize" class="d-flex justify-content-center"
   [collectionSize]="products.length"></ngb-pagination>
       <!-- /#page-wrapper -->
 
